# ChangeLog for dev-ruby/code_analyzer
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*code_analyzer-0.3.0 (15 Nov 2012)

  15 Nov 2012; Hans de Graaff <graaff@gentoo.org> +code_analyzer-0.3.0.ebuild:
  Version bump.

*code_analyzer-0.2.0 (05 Oct 2012)

  05 Oct 2012; Hans de Graaff <graaff@gentoo.org> +code_analyzer-0.2.0.ebuild,
  +metadata.xml:
  Initial import for rails_best_practices.
