@@ -3,10 +3,11 @@ Hash: SHA256
 
 DIST code_analyzer-0.2.0.gem 14848 SHA256 4135239faf3b19997b99fbd2dc3b8c87f7952dd6ab7ee4c923f6c3c03a660e42 SHA512 ddc8ce321641016ae092d8cb94f51a2bd65edb3f28a2162b240837209021b1f7c51086889eceb079bffc9de6a196de283146f14baccaeec737a22cd9648ab96a WHIRLPOOL 9a0ebb5cdb3f02348ed6ef99a04d0cafce66bb76851fa8c07699a8ed565d6cfba4a6f4ca6d0dc443154447bb184b5e102c14854727603cf7097441d0d22a2be2
 DIST code_analyzer-0.3.0.gem 15360 SHA256 47a69e120f5ee9c17580d59618df9070465618db53a232caebf14260e21c625f SHA512 70b77969a2f532f29424414d84aa7ef2b9daf3e489bf0278867a2e1961048acf70a072bc8bba136434b28c3a03e4a4a9006919a18f1a480586b19c848b0aedee WHIRLPOOL cac4dfd3fa777829747c52be42e4492ac9369446c6c30a0d89156fb50500449e2f104536e2b4d561385952094d18b7766b8887236eccde79521e7dcc19b0bdea
+DIST code_analyzer-0.3.1.gem 15872 SHA256 52b3310d7524681ac03ecf351b37860d7b7db9db947bb462c41e12d38fe6af40 SHA512 9b3f0892a4334aa855af907c7acc40e1dcb2d929eeb9447bee249a9476b341ed18f0c6c5c6e3f92f92e0aa0c595430618205c6343c5fe11c6a300561626d1647 WHIRLPOOL 0bd8acff4d136883fd48792921a5d3353538e2da1375736dc539da7bc016124746b4e0d32d4815b9f00154407e651dc5c3e7ba6e6082a117d3be41fc896d60cc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlCk8xQACgkQiIP6VqMIqNdnRwD9GzFceu3B6sBUDITzZ64Qmzk2
-HGEqq11fOBWfURLQeMsBAJXLKvSRqcJQZ6kYLo1iRJvm7rHSqlNxuwWskmT2oW69
-=5Q/A
+iF4EAREIAAYFAlDhmwYACgkQiIP6VqMIqNc3swEAjmPgMcLKa+y8b2FnQND2dF5N
+s6hiYS5rJrSKqnKDDdQBAJf0zTuMEDcBrbo0XPN2XYi2SjQP9o+WVbHRTLTpOC09
+=HpPp
 -----END PGP SIGNATURE-----
