@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*code_analyzer-0.3.1 (31 Dec 2012)
+
+  31 Dec 2012; Hans de Graaff <graaff@gentoo.org> +code_analyzer-0.3.1.ebuild:
+  Version bump.
+
 *code_analyzer-0.3.0 (15 Nov 2012)
 
   15 Nov 2012; Hans de Graaff <graaff@gentoo.org> +code_analyzer-0.3.0.ebuild:
